tests/error/non_function_template.gw
#! [contains] tests/error/non_function_template.gw
var int test;
test:[int]();
